--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   height: 10%;
+  background-color: lightblue;
 }
 
 header img {
@@ -33,8 +34,18 @@ h5 {
   vertical-align: top;
   margin-left: 2em;
   margin-bottom: 2em;
-  width: 33%;
-  height: 33%;
+  max-width: 33%;
+  max-height: 33%;
+}
+
+.interseccao {
+  background-color: grey;
+  font-size: 25px;
+  font-weight: bolder;
+  width: 100%;
+  height: 5em;
+  min-width: 100%;
+  line-height: 5em;
 }
 
 .footer-clean {
