--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ h5 {
   background-color: grey;
   font-size: 25px;
   font-weight: bolder;
+  font-style: italic;
   width: 100%;
   height: 5em;
   min-width: 100%;
